--- a/index.html
+++ b/index.html
@@ -8,33 +8,25 @@
 </head>
 
 <body>
-    <div class="header">
+    <div class="header">    
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
-            <ul>
-                <li>
-                    <!-- Link to SEO Section -->
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <!-- Link to ORM Section -->
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <!-- Link to SMM Section -->
-                    <a href="#social-media-marketing">Social Media Marketing!</a>
-                </li>
-            </ul>
+           <ul>
+                <!-- Links to Sections -->
+                <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+                <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+                <li><a href="#social-media-marketing">Social Media Marketing!</a></li>
+           </ul>
+    
         </div>
     </div>
 
-    <div 
-        class="hero">
+    <div class="hero">
     </div>
-
+    
     <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <div id="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -43,8 +35,8 @@
             </p>
         </div>
 
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <div id="online-reputation-management">
+            <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -53,8 +45,8 @@
             </p>
         </div>
 
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        <div id="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -67,7 +59,7 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="lead-generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -76,7 +68,7 @@
 
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="brand-awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -85,7 +77,7 @@
 
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="cost-management">
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
